Changed page format

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   <h1>
     An American Classic
   </h1>
+  <div class="wrapper">
+  <div class="top">
   <h2><u>
     Peanut Butter Cookies
   </u></h2>
-  <div class="sec1">
     <p>This recipe is from Preppy Kitchen and was published by "<strong>John Kanell</strong>" and found on
       <a href="https://preppykitchen.com/peanut-butter-cookies-recipe/">https://preppykitchen.com/peanut-butter-cookies-recipe/</a>
     </p>
@@ -28,7 +29,31 @@
       </figcaption>
     </figure>
   </div>
-  </sec1>
+  <div class="container">
+    <div class="greebles">
+        <div class="conv">
+        <h3><u>Conversion</u></h3>
+        <br>
+        <form>
+        <input type="text" name="tablespoon" placeholder="Tablespoons"> = <input type="text" name="cup"placeholder="Cups">
+        </form>
+        </div>
+        <div class="diff">
+        <fieldset>
+        <legend style="line-height: 25pt;"><b>Rate Recipe Difficulty</b></legend>
+        <form>
+          <input type="radio" id="easy" name="difficulty">
+          <label for="easy">Easy</label>
+          <input type="radio" id="med" name="difficulty">
+          <label for="med">Medium</label>
+          <input type="radio" id="hard" name="difficulty">
+          <label for="hard">Hard</label>
+        </form>
+        </fieldset>
+      </div>
+    </div>
+  </div>
+  <div class="tools">
   <h3>
   Appliances and Tools
   </h3>
@@ -40,26 +65,9 @@
     <li>Baking Sheet</li>
     <li>Parchment Paper</li>
   </ul>
-  <div class="greebles">
-    <h3>Conversion</h3>
-    <br>
-    <form>
-    <input type="text" name="tablespoon" placeholder="Tablespoons"> = <input type="text" name="cup"placeholder="Cups">
-    </form>
-    <br>
-    <fieldset>
-      <legend>Recipe Difficulty</legend>
-    <form>
-      <input type="radio" id="easy" name="difficulty">
-      <label for="easy">Easy</label>
-      <input type="radio" id="med" name="difficulty">
-      <label for="med">Medium</label>
-      <input type="radio" id="hard" name="difficulty">
-      <label for="hard">Hard</label>
-    </form>
-    </fieldset>
-  </div>
-  <div class="sec3">
+</div>
+  
+  <div class="ingred">
     <h3>
       Ingredients
     </h3>
@@ -74,6 +82,9 @@
       </li>
       <li>3/4 tsp baking powder 3g</li>
     </ul>
+  </div>
+  
+  <div class="direc">
     <h3>
       Directions
     </h3>
@@ -86,6 +97,7 @@
       <li>Flatten the cookie dough balls with a fork in a criss-cross pattern. Bake cookies for about 8 minutes. Allow cookies to cool completely on a baking sheet, they need to set up before being transferred.</li>
     </ol>
     <script src="script.js"></script>
+  </div>
   </div>
   <hr>
     <a href="" style="font-size: 70%;">Back to the main page</a>
