--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="container">
     <div class="greebles">
         <div class="conv">
-        <h3><u>Conversion</u></h3>
+        <h3><u>Conversion Table</u></h3>
         <br>
         <form>
         <input type="text" name="tablespoon" placeholder="Tablespoons"> = <input type="text" name="cup"placeholder="Cups">
